# ChangeLog for dev-libs/klibc
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/klibc/ChangeLog,v 1.92 2013/08/24 12:23:49 ago Exp $

  24 Aug 2013; Agostino Sarubbo <ago@gentoo.org> -klibc-1.1.ebuild,
  -klibc-1.5.11.ebuild, -klibc-1.5.12-r1.ebuild, -klibc-1.5.12.ebuild,
  -klibc-1.5.15-r1.ebuild, -klibc-1.5.15.ebuild, -klibc-1.5.20.ebuild,
  -klibc-1.5.23.ebuild, -klibc-1.5.24.ebuild, klibc-1.5.25.ebuild:
  Stable for amd64, wrt to bug #369075, remove old and ppc has losed the stable
  keyword because of bug #476732

  23 Jul 2013; Andreas Schuerch <nativemad@gentoo.org> klibc-1.5.25.ebuild:
  x86 stable, see bug 369075

  12 Jul 2013; Agostino Sarubbo <ago@gentoo.org> klibc-1.5.23.ebuild:
  Stable for amd64, wrt bug #369075

  16 Mar 2013; Michael Pagano <mpagano@gentoo.org> klibc-1.5.25.ebuild:
  Fix linker arguments. Bug #375729

*klibc-2.0.2 (16 Mar 2013)

  16 Mar 2013; Michael Pagano <mpagano@gentoo.org> +klibc-2.0.2.ebuild:
  Version bump. Bug #442822. Thanks to AlphatPC.

  14 Mar 2013; Michael Pagano <mpagano@gentoo.org> klibc-1.5.20.ebuild,
  +files/klibc-1.5.20-parallel-make.patch:
  Fix parallel make issue. Bug #461016

  06 Jan 2013; Agostino Sarubbo <ago@gentoo.org> klibc-1.5.25.ebuild:
  Add ~sparc, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> klibc-1.5.25.ebuild:
  Add ~alpha, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> klibc-1.5.25.ebuild:
  Add ~ia64, wrt bug #449220

  31 Dec 2012; Agostino Sarubbo <ago@gentoo.org> klibc-1.5.25.ebuild:
  Add ~ppc64, wrt bug #449220

*klibc-1.5.25 (30 Aug 2011)

  30 Aug 2011; Tim Harder <radhermit@gentoo.org> +klibc-1.5.25.ebuild:
  Version bump.

*klibc-1.5.24 (17 Aug 2011)

  17 Aug 2011; Tim Harder <radhermit@gentoo.org> +klibc-1.5.24.ebuild:
  Version bump

*klibc-1.5.23 (19 Jul 2011)

  19 Jul 2011; Tim Harder <radhermit@gentoo.org> +klibc-1.5.23.ebuild,
  +files/klibc-1.5.23-parallel-make.patch: