@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX klibc-1.1-mips32.patch 670 SHA256 42d127d2d5348b7856d33b7ffce986d49c7adbef82cf2bb34aa06a022fabad4c SHA512 d7795bc86da263535e998a33147c4cb5797cd8747ff6f4bfc23f2d77d36ede4aaf60fff5c1c926764e6cd126fe8af29b68540b5222815dcf1ad9fd7bfa6f8b48 WHIRLPOOL 12e5a2b91642e326584cd782ffcff84a0d4fce67cfd90982f254e0c095a05ff79cfc46984d3eedf7146fc12e797c2e6b8964e0842f4b02831824eb037a9f6943
 AUX klibc-1.4.11-interp-flags.patch 494 SHA256 ef8c05d059bc0185b8b68ea42e660fa13ddb55e9653b10fbfdabd77dea7abe2a SHA512 64242223dee668467b52092dba81a3ab29137d3611cf11f331aae1fa9eb8a3ae19b3847128bd693cd2c835c7e2ff1e247cae821561ca7c039bb4a212c8726a42 WHIRLPOOL 46bb64ab7a398f4998d1455d42d8596a9be37f2919835198d098f5935e2f7aa0b8735acb1b79f5ddaf4b17e7af3c4f805b8d63496aa0568757a15bc187461a37
@@ -13,31 +13,19 @@ AUX klibc-1.5.23-parallel-make.patch 759 SHA256 4934bff9ec96bef18e1177485c50b70c
 AUX klibc-1.5.7-strip-fix-dash-s.patch 420 SHA256 971cadc28aa362ff76ebfee8187bb6986afb4f3425b70b7200d1aa1c6fd746e7 SHA512 c1c70c86d34ac1ea716fe5f2caeb3005db6d060ed0c5dabe94a44f0317725c7775a9da8e463b71b8533f0315d6e0cd861c8684ddf1f426586296dc69d88ac438 WHIRLPOOL 38622e4a1a00cd418f39e5b23e90f83486c0c6d3421fc3b900a039739294552ab5f080de8f17c17c39efc0038451ba0345d3f3ffebbe77fb3f63d111873881de
 AUX klibc.m4 3619 SHA256 02901ef2ca8b320d77b03fab4fa9bef809c11e2e418e7da00aa2c13c4a84dd44 SHA512 42cf4add07031105689d7438838e0306d32a637e8a4719afc11722fd8f1ac040e6bb92cc7ba3536b83a6de8907a91bc5ad11036f22810443f4cd24161950cc6b WHIRLPOOL 798f1af18939edb2c48aacf34cf4ef107468eeb47679d2695350c873bf19121ecdecb797b3a825675bee32b04f057211b2402b2a86d138a203c14f699da45c28
 DIST klibc-1.5.25.tar.bz2 510064 SHA256 0b910ec0b2a97d4c775ed06e44ad7bca7be150efdf2a77a19253a573e16367d3 SHA512 e550afb319cd995fb9c7fb086bc8ede550e5e4a48856ff5856e2296f691ba643c9fcc314c5e973f4d5b4f33b543ef4bc10d29b389f83e5418ec860a80e7cac45 WHIRLPOOL d986dcdcc95e2c7846d2eda9338519d5d84f50e94f82f1eee0234a17504ae10abaa75b6c89e9cf4c228690c0cc489d4323d98e5e62cde10cf7a04581026309f3
-DIST klibc-1.5.8.tar.bz2 490132 SHA256 b010fd9ea4624f4abc62a0ec93cecae9e9f0a7f856dd678da3fc61cc1d59ca0d SHA512 d286e36796e0fd7c588e25e0463745d0bd3316437f67da88ea686b991b87852ca50b50b67cf548f348c8d7ab796d6bb6975b4da67269ef0b42cb23c4887e1518 WHIRLPOOL 07aed9e3c93e00c3596bb0f3e6bd5d22d893c84a987de6533c4213ad7a3da289ad1cd4e4ebd0c251f7e417182ff31a2fa3772fe489354ebae627887a6374aeba
 DIST klibc-2.0.2.tar.xz 466696 SHA256 1e9d4ba6fe2aeea0bd27d14a9a674c29fb7cf766ff021e9c5f99256cb409474e SHA512 14c862ac58da37db98b40cc03a216643a4d2c424ea1b988f6ea274c999515c6661f711adcf5aac8ed10c7668e05004b8844b0a862c2f32fa28c240dd37003722 WHIRLPOOL 6fea496b32e08e8fd0c54b60997da70db2d6216a8f4a2c6d56ce83485f41c82cce291344ecffac0a38cfa88308033fe768e9b50d2102d803f7b8ff18412100a0
-DIST linux-2.6.23.tar.bz2 45488158 SHA256 d4e67c0935ffb2a4158234bff92cc791b83177866009fc9b2214104e0038dbdb SHA512 432f10a6af54f67b4489a9f07a269e26f06b01de74ee59faa8304bc712f9a7106d0d422911ab7fea05c1295340e3a8e823062c6e7acafad6d73a91c8a518deff WHIRLPOOL d81ed03b9aba855c449b9d9d6dd78e72fc51d7f4bc976a53e2f42d96e0e841586d2cc77f365995bc12ee37864457066a2896327c44e0560f1b8c9b147d64a2bd
 DIST linux-2.6.39.tar.bz2 76096559 SHA256 584d17f2a3ee18a9501d7ff36907639e538cfdba4529978b8550c461d45c61f6 SHA512 06cb5aba7c53c68d43afcebbbb9507d8b398b3e994d8a237c66a49374ca569237f074adaa3fccba7f908eab4f51f99bae40656793eab5c2f5ce03cd3a65fa02c WHIRLPOOL 2f2c833ab1d8ddbe3e0b862b71a38d47fd3fc5688ea81cdd818369b09e72fa50481bf84533ddcea992af1130b2ceec10b6ff5eaff393a14ee70639293a555912
 DIST linux-3.2.tar.xz 65065516 SHA256 dd96ed02b53fb5d57762e4b1f573460909de472ca588f81ec6660e4a172e7ba7 SHA512 77e9a52d78d6c8e951df1e166023eebe5defc5ef3c45d3ac84b613137b3c2e55cee5693d828ebd06c5034bd89ea2a5f862f55824f2b7839c9ad7212c81e3ecb0 WHIRLPOOL 7cc68baac4441740e2171fbbc4195ee6c0351de099aadaee8cb3487f6d1f8b7e1d3144ee54ba38dbd24d6be431a1ea3b921ffce82ff84df21a98da7bc61c1d17
-DIST patch-2.6.24-rc7.bz2 9658462 SHA256 dbd8403cc9ad11afb51b8050d6cbda97caec87d1b07c80266b1e4b1f437268a3 SHA512 722e4cfee69f1782f691d4965289de9a5cb5fe9c736dbcfd49c3a4c374e6d5abda38f48ea47e50f36a004bcbf549cd8213a4c9b8c083465c7b6b23b9dff0f524 WHIRLPOOL 9b84c8d954f0247c2cb657f54269ecfc9c2ce605b8b2bc3736303a9d128e1f5b000d8df306a5ea24c9c3f4d962bf40902e3c478888de2b7de89dfe3efb86589c
 EBUILD klibc-1.5.25.ebuild 7605 SHA256 48b2924efd4cece6a3c6d100ebd6cf40402fcedbe766297faa825ed7a1d69712 SHA512 98804fad0d8652da84db78ceb2c3c210bd39798b2a2e8416507d898e228439ed2aff8f99cab3ad1c26b1aa9736d71285b44740e6437c5d753f3909222436ad4a WHIRLPOOL c8b1ccf03928d07e2555f00149c07328cf33aba3ca2d5d723ec97389e51f711fb4ddbb451721e674ff4210586b29cb6facb0e332d5baa8f99092cfe3cdd762aa
-EBUILD klibc-1.5.8.ebuild 6826 SHA256 94ad6efd58dd2b037b55b05a9218988dc297f8d0dca936db258b6aa91ec3fb35 SHA512 91595c505fc8235c0bfffe91494d00203cce1796820cbf52c3d695e5b5342e0ed7d4296d12b37e6b650f992f771ea8a93a3c20de360d8f774551c95caa7c4f82 WHIRLPOOL 00b541e42c920c9ae1b415a281d75f1d3d5141d00dd22895b81801ee464ca14dc15df4acacf392216708135932546bd61b2c6886ff82fca40e39136a709430ce
 EBUILD klibc-2.0.2.ebuild 8110 SHA256 42b1696b9f614cb8db9981cd44f0ce4ad80df67171e84b5c2d46f6665d7ab562 SHA512 51ba0e93c5bb71dfe8addcb9a8a7d5b5e0feb9078e0bd49afee533ed40deed144cd3f3226a99d29b24ac6b4d1e927f394197019fe2816c3368f0ef4248c801c6 WHIRLPOOL 480efa538a39f7bfd93d375f4d06161aaf1fa4f6686bc1be5909b16083db331ac4d9240c19b36659a075044bcfef9fb8a668da828ffbef8552ff0f434dae6619
-MISC ChangeLog 15182 SHA256 32b8cd3c21e9fa8acde73531498e1052b5b6512da7d6f4c5564210f7d8d8b3d0 SHA512 7445f90f6e5c7ce584a9b89adb4532071366985528170d4cf0704789d6d1128f315ae2d876d59ee63fd0c5943ea8bd52c91a7766193249c146cdee86937697c2 WHIRLPOOL bedaacab109114c859e963b75948b21a449eec8af6d98da395b0bb1c594735a1ccdae0b48bdf7194c31494b586639846543ac9664520fa236c4392db358ddf32
+MISC ChangeLog 15303 SHA256 9b78365ca6c961a3c5ca6a97085bc0932384f80280551dddb65c4b9dfc712e04 SHA512 8cba0ab2330da5c75d41f7e6bc7bd48d7af9c8e90bc02b5a5160b3593aaad201564fb63548b43329962228758f7502594c071d64da408c0238a2ae3cc602264d WHIRLPOOL 777a7614000655ed5394d59260601da906701ebd6b1383092ace048d16ad7cdd23e70829c7e3f95aa7cd9c57e4cf3139b7df3ff4c7cdadb9a7ec4ff5283962f4
 MISC metadata.xml 164 SHA256 3b1b59f5a5a6e3a377f6124aa855936c20e9b883f7bbbef0210fdef022da34f3 SHA512 84cc2f3f5b3ece35f020ba9a4b29f5ea9082ee201bc21b5a386c5f8a44a685967a27e2af96e3f6addc19ee0b6ee80e116f2afab770ec4e57b994f97c3d1161ea WHIRLPOOL 9b0f6952edfd4458f8d8f2186f89ae04ecc2b8de5eb819626c8da501dbac0ab3bcf8606b10a896582b2c5ab9de015f174ca4962f98fd4772759046213767e13e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSGKUiAAoJELp701BxlEWf/wMQAKrGfM8Ay6b9C3k5G7TJBozi
-GwPVpM2DDDndSUP1hFxRzpTfP8aogGTqB7QOj/8GXXY7azAwH+yK2mwLZatb13+q
-N1oOieb4QdWL70ZAsZs4Ba05fT/jZ8TfW3jI+xc/J10Om/SVBvqusoNYWVUJecSM
-Sb2v9aCUxhx+IVac7TIsHhL33GLcwEPNf/nGSTJ0gwITbAs7ZocXEakFcoRO27+c
-trE/GCFle/WAV/dWjmAmU+lMro7FHlQQvPycTGV6XPhcXqSOSMrjPtiHMWRwPHrJ
-hGKlEB9DO77GO/boAVCzmmgYaXr6I+3U7CY16fRlYbua4p+CSrLSsK9JZzRFlsRj
-F+kCMYNXi4immtSd8CIqGT1dMxq9xepny+oZVhCle05ryLyJxbTRXKgIdgYlak0p
-ndz9narWMWw2cl6kKjrjsQyodGZd4w+1gIogXXREvOetFX3JE06nRiCTp93CJj68
-zVYUIOd8AC9XtS5FMqeT5s4IrERCrbi9k3Zr4GYXrL8rl+oeTGb1ST+0YcyNebn3
-gfHZEDLYE5V4uqLf69Kl2hKcAgv65i1+vOJu550ALJGHyLVsGH/ld/w0bTk65dR9
-vfF5hM/T6hf2mCnipe3iAwwFdCSny6KmLuRlyKVw8/cJSSkXmUAeHSI+J/5cfSx7
-Z8zeTagNCtMl3VzAezmP
-=IO9+
+iKYEAREIAGYFAlJEyJdfFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
+bnBncC5maWZ0aGhvcnNlbWFuLm5ldEM2NzU5RjUyMDczREJDQkVDQTBDRkE1NERC
+Nzk1QThBNDI2MTgzNTQACgkQ23laikJhg1RcCgCgn+o5Zfc+w6lNg9HMkxdY6Z1R
+TbAAoKLB8Rxi6DD6IbcWhIylht0wq4Fc
+=rQoo
 -----END PGP SIGNATURE-----
