@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile install unpack
-DEPEND=dev-lang/perl
-DESCRIPTION=A minimal libc subset for use with initramfs.
-HOMEPAGE=http://www.zytor.com/mailman/listinfo/klibc
-IUSE=debug
-KEYWORDS=amd64 -mips ppc x86
-LICENSE=|| ( GPL-2 LGPL-2 )
-RDEPEND=dev-lang/perl
-RESTRICT=strip
-SLOT=0
-SRC_URI=mirror://kernel/linux/libs/klibc/klibc-1.5.8.tar.bz2 mirror://kernel/linux/libs/klibc/Testing/klibc-1.5.8.tar.bz2 mirror://kernel/linux/kernel/v2.6/patch-2.6.24-rc7.bz2 mirror://kernel/linux/kernel/v2.6/testing/linux-2.6.23.tar.bz2
-_eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=fc26526d39125f54eb346c5d3e0617b3
